syntax = "proto3";

package com.payroll.payslip.proto;

option java_multiple_files = true;
option java_package = "com.payroll.payslip.proto";

    message GetPersonRequest {
        int64 id = 1;
    }

    message GetPersonResponse {
      int64 id = 1;
      string first_name = 2;
      string sure_name = 3;
      string email = 4;
      string birth_date = 5;
    }

    service PersonDataService {
      rpc GetPersonById(GetPersonRequest) returns (GetPersonResponse);
    }